public interface ISkillSelectable {

    public int skillSelect();

}